--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exemplo Spring Boot com Thymeleaf</title>
+<meta charset="ISO-8859-1">
+<title>Grupo 2 - Desafio Mensageria</title>
 </head>
 <body>
-  <h1>Olá <span th:text="${nomeDoAtributo}"></span></h1>
+    <div align="center">
+        <div><h2>Envie aqui seu CSV</h2></div>
+        <div>
+            <form action="upload" method="post" enctype="multipart/form-data">    
+                <p>
+                    <input type="file" name="file" required />
+                </p>
+                 
+                <p>
+                    <button type="submit">Submit</button>
+                </p>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
