--- a/src/main/resources/templates/client/cliente.html
+++ b/src/main/resources/templates/client/cliente.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta charset="ISO-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Grupo 2 - Desafio Mensageria</title>
 	</head>
 		<body>
 		  <div align="center">
 		    <div><h2>Cadastro de cliente</h2></div>
 		    <div>
-		      <form action="submit" method="post" enctype="multipart/form-data">    
+		      <form th:action="@{/clientes}" id="clientes" th:object="${cliente}" method="post">    
 		        <p>
 		        	<label>Nome                	
-		            <input type="text" name="nome" required />
+		            <input type="text" id="nome" th:field="*{nome}" required />
 		        	</label>
 		        </p>
 		        
 		        <p>
 		        	<label>
 		        		Telefone
-		            <input type="tel" name="telefone" required />
+		            <input type="tel" id="telefone" th:field="*{telefone}" required />
 		        	</label>
 		        </p>
 		        <p>
@@ -27,9 +27,6 @@
 		      </form>
 		    </div>
 		  </div>
-			<script>
-			  let submitBtn = document.getElementById("submit");
-			  submitBtn.addEventListener("click", () => console.log("clicou"));
-			</script>
+		  
 		</body>
 </html>
