--- a/src/main/resources/templates/client/client_result.html
+++ b/src/main/resources/templates/client/client_result.html
@@ -4,7 +4,7 @@
     <title>Grupo 2 - Desafio Mensageria</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body>
+<body align="center">
 	<h1>Cliente cadastrado com sucesso:</h1>
     <p th:text="'Id: ' + ${cliente.id}" />
     <p th:text="'Nome: ' + ${cliente.nome}" />
