--- a/src/main/resources/templates/client/client_register.html
+++ b/src/main/resources/templates/client/client_register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -8,7 +8,12 @@
 		  <div align="center">
 		    <div><h2>Cadastro de cliente</h2></div>
 		    <div>
-		      <form th:action="@{/clientes}" id="clientes" th:object="${cliente}" method="post">    
+		      <form 
+		      	th:action="@{/clientes}" 
+		      	id="clientes" 
+		      	th:object="${cliente}" 
+		      	method="post"
+		      >    
 		        <p>
 		        	<label>Nome                	
 		            <input type="text" id="nome" th:field="*{nome}" required />
@@ -29,4 +34,45 @@
 		  </div>
 		  
 		</body>
+</html> -->
+
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Add User</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/shards.min.css">
+  </head>
+  <body>
+    <div class="container my-5">
+      <h2 class="mb-5">Novo Cliente</h2>
+      <div class="row">
+        <div class="col-md-6">
+          <form action="#" th:action="@{/clientes}" th:object="${cliente}" method="post">
+            <div class="row">
+              <div class="form-group col-md-6">
+                <label for="nome" class="col-form-label">Nome</label>
+                <input type="text" th:field="*{nome}" class="form-control" id="nome" placeholder="Nome" required>
+                <span th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}" class="text-danger"></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="telefone" class="col-form-label">Telefone</label>
+                <input type="text" th:field="*{telefone}" class="form-control" id="telefone" placeholder="Telefone" required>
+                <span th:if="${#fields.hasErrors('telefone')}" th:errors="*{telefone}" class="text-danger"></span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6 mt-5">
+                <input type="submit" class="btn btn-primary" value="Cadastrar">
+              </div>
+            </div>    
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
