Ajustando tela principal para listar clientes e renomeando as rotas

--- a/src/main/resources/templates/client/client_result.html
+++ b/src/main/resources/templates/client/client_result.html
@@ -9,6 +9,10 @@
     <p th:text="'Id: ' + ${cliente.id}" />
     <p th:text="'Nome: ' + ${cliente.nome}" />
     <p th:text="'Telefone: ' + ${cliente.telefone}" />
-    <a href="/cliente">Submit another message</a>
+    <p class="my-5">
+    	<a href="/clientes" class="btn btn-primary">
+    		<i class="fas fa-user-plus ml-2"></i>
+    	</a>
+    </p>
 </body>
 </html>
