--- a/src/main/resources/templates/client/client_register.html
+++ b/src/main/resources/templates/client/client_register.html
@@ -52,7 +52,7 @@
       <h2 class="mb-5">Novo Cliente</h2>
       <div class="row">
         <div class="col-md-6">
-          <form action="#" th:action="@{/clientes}" th:object="${cliente}" method="post">
+          <form action="#" th:action="@{/clientes/register}" th:object="${cliente}" method="post">
             <div class="row">
               <div class="form-group col-md-6">
                 <label for="nome" class="col-form-label">Nome</label>
